# WebScrape-TUI

./: .env.example  .flake8  .gitignore  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CONTRIBUTING.md  INSTALL-ARCH.md  LICENSE  README.md  V2.1.0_IMPLEMENTATION_STATUS.md  flake8_initial.txt  install-arch-python312.fish  migrate_legacy_tests.py  package-lock.json  pyproject.toml  requirements-dev.txt  requirements-v2.1.0.txt  requirements.txt  scrapetui.py  test_basic.py  web_scraper_tui_v1.0.tcss  web_scraper_tui_v1.0RC.tcss
.claude/: settings.local.json
.github/workflows/: python-package.yml
docs/: API.md  ARCHITECTURE.md  CLI.md  COMPREHENSIVE_IMPLEMENTATION_ANALYSIS.md  DEVELOPMENT.md  INSTALLATION.md  MIGRATION.md  PLUGINS.md  PROJECT-STATUS.md  README.md  ROADMAP.md  SECURITY-AUDIT.md  SPRINT3_COMPLETION_REPORT.md  TECHNICAL_DEBT.md  TEST_INFRASTRUCTURE_FIXES.md  TROUBLESHOOTING.md  V2.0.0-PROGRESS.md  V2.1.0_DEVELOPER_GUIDE.md  V2.1.0_IMPLEMENTATION_STATUS.md  V2.1.0_PHASE1_COMPLETE.md  V2.1.0_PHASE2_COMPLETE.md  V2.1.0_PHASE3_COMPLETE.md  V2.1.0_REFACTOR_REPORT.md  V2.1.0_SESSION_SUMMARY.md
scrapetui/: __init__.py  config.py  constants.py
scrapetui/ai/: __init__.py  content_similarity.py  entity_relationships.py  processors.py  question_answering.py  summary_quality.py  topic_modeling.py
scrapetui/api/: __init__.py  app.py  auth.py  dependencies.py  exceptions.py  middleware.py  models.py
scrapetui/api/routers/: __init__.py  ai.py  articles.py  scrapers.py  tags.py  users.py
scrapetui/cli/: __init__.py  __main__.py
scrapetui/cli/commands/: ai.py  articles.py  db.py  export.py  scrape.py  user.py
scrapetui/core/: auth.py  cache.py  database.py  database_async.py  permissions.py
scrapetui/database/: migrations.py  queries.py  schema.py
scrapetui/models/: __init__.py  article.py  scraper.py  session.py  tag.py  user.py
scrapetui/scrapers/: __init__.py  base.py  manager.py
scrapetui/scrapers/builtin/: __init__.py  generic.py  news.py  tech.py
scrapetui/utils/: errors.py  logging.py
scripts/: install-python313.sh
tests/: __init__.py  conftest.py  test_advanced_ai.py  test_ai_providers.py  test_analytics.py  test_bulk_operations.py  test_config_and_presets.py  test_database.py  test_duplicate_detection.py  test_enhanced_export.py  test_entity_relationships.py  test_json_export.py  test_performance.py  test_question_answering.py  test_scheduling.py  test_scraping.py  test_summary_quality.py  test_topic_modeling.py  test_utils.py  test_v2_auth_phase1.py  test_v2_phase3_isolation.py  test_v2_ui_phase2.py
tests/api/: conftest.py  test_ai.py  test_articles.py  test_auth.py  test_misc.py  test_scrapers.py  test_tags.py  test_users.py
tests/cli/: __init__.py  test_cli_integration.py
tests/integration/: test_scraper_integration.py
tests/unit/: test_ai_processors_duplicates.py  test_ai_processors_keywords.py  test_ai_processors_ner.py  test_cache.py  test_database.py  test_database_async.py  test_models.py  test_scrapers.py
